using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace WSMGameStudio
{
    public static class AnimationParameters
    {
        public const string Open10Degrees = "Open10Degrees";
        public const string Open30Degrees = "Open30Degrees";
        public const string Open45Degrees = "Open45Degrees";
        public const string Open60Degrees = "Open60Degrees";
        public const string Open90Degrees = "Open90Degrees";
        public const string KeyUnlocked = "KeyUnlocked";
    }
}
